# risc-zero-verifier

./: Cargo.toml  README.md  package-lock.json  package.json
examples/password-checker/journal-parser/pkg/: package.json  password_checker_journal_parser.d.ts  password_checker_journal_parser.js  password_checker_journal_parser_bg.wasm  password_checker_journal_parser_bg.wasm.d.ts
examples/verifyAttestation/: Cargo.toml
examples/verifyAttestation/journal-parser/: Cargo.toml
examples/verifyAttestation/journal-parser/pkg/: package.json  verifyAttestation_journal_parser.d.ts  verifyAttestation_journal_parser.js  verifyAttestation_journal_parser_bg.wasm  verifyAttestation_journal_parser_bg.wasm.d.ts
examples/verifyAttestation/journal-parser/src/: lib.rs
examples/verifyAttestation/src/host/: Cargo.toml
examples/verifyAttestation/src/host/src/: helper.rs  main.rs  structs.rs  zk_proof.rs
examples/verifyAttestation/src/methods/guest/: Cargo.toml
examples/verifyAttestation/src/methods/guest/src/: main.rs
journal-parser-registry/: registry.json
wasm/: Cargo.toml
web/: package.json  webpack.config.js
web/src/: App.js
