[package]
name = "verifyAttestation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
hex = "0.4"
rand = "0.8"
risc0-zkvm = "1.0.5"
ethers-core = { version = "2.0.14"}
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "verify_attestation"
path = "src/methods/guest/src/main.rs"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
