[package]
name = "verifyAttestation-journal-parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
risc0-zkvm = { version = "1.0.5", default-features = false }
ethers-core = { version = "2.0.14"}
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.41"
