[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
bincode = "1.3.3"
risc0-zkvm = { version = "1.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
ethers-core = { version = "2.0.14"}
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
chrono = "=0.4.38"
serde_json = "1.0.127"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
sha2 = "0.10.8"
anyhow = "1.0.89"

